Adiciona gráficos sobre produtividade do trabalho

--- a/index.html
+++ b/index.html
@@ -31,12 +31,19 @@
 				Com base nessa definição, o que se pode presumir é que definitivamente o ponto eletrônico não promove trabalho, uma vez que não garante que as forças produtivas serão exercidas e menos ainda que algum objetivo desejado será alcançado.
 				Percebe-se que o controle de horário através de ponto eletrônico não implica em produção.
 			</p>
-			<h3>Realidade</h3>
 			<p>
-				Enquanto a expectativa é de que o ponto eletrônico promove trabalho, a realidade se manifesta de forma diferente.
-				Na verdade a Agência de Estatísticas do Trabalho dos Estados Unidos, mostra que não existe seguer uma correlação estatística entre o controle de horas trabalhado e a produtividade.
-				Dois exemplos complementares podem ser observados nos gráficos abaixo que apresentam, entre outras coisas, a relação entre indíce de produtividade e horas de trabalho das indústiras de <em lang="en">software</em> e 
+				Enquanto a expectativa é de que o ponto eletrônico promova trabalho, a realidade se manifesta de forma diferente.
+				Na verdade a Agência de Estatísticas de Trabalho dos Estados Unidos (<i lang="en">U.S. Bureau of Labor Statistics</i>), mostra que não existe, seguer, relação estatística <strong>direta</strong> entre o controle de horas trabalhadas e a produtividade.
+				Dois exemplos complementares podem ser observados nos gráficos abaixo que apresentam, entre outras coisas, a relação entre indíce de produtividade e horas de trabalho das indústiras de <i lang="en">software</i> e de veículos de publicação, respectivamente.
+				No caso das indústrias de <i lang="en">software</i> pode-se observar que há uma relação <strong>inversa</strong> entre horas de trabalho e produtividade. Equanto ocorreu um aumento na primeira, houve um decréscimo na segunda.
+				Já no caso de veículos de publicação nota-se o oposto da relação inversa, isto é, quando a quantidade de horas de trabalho diminui, o indíce de produtividade aumenta.
+				Além desses, <a href="https://beta.bls.gov/api-charts/home.htm">outros exemplos</a> da indústria podem ser encontrados na página do <i lang="en">U.S. Bureau of Labor Statistics</i>.
 			</p>
+			<figure>
+				<img src="produtividade-software.svg" alt="Produtividade e horas de trabalho na indústria de software." />
+				<img src="produtividade-veiculos-de-publicacao.svg" alt="Produtividade e horas de trabalho na indústria de veículos de publicação." />
+				<figcaption>Relação inversa entre horas de trabalho e indíce de produtividade em setores da indústria dos Estados Unidos.</figcaption>
+			</figure>
 		</section>
 		<section>
 			<h2>Referências</h2>
