Complementa explicação sobre a página

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				Esta página tem como objetivo a exposição de percepções acerca do ponto eletrônico e suas implicações práticas.
 				Busca-se analisar afirmações lacônicas e categóricas a respeito do ponto eletrônico.
 				Essa análise se faz necessário por existir um grande obscurantismo a respeito do tema.
-				Não é difícil encontrar informações logicamente incoerentes e/ou carantes de dados concretos.
+				Não é difícil encontrar informações logicamente incoerentes e/ou carantes de dados concretos sendo veículadas como verdades indubitáveis.
 				Por isso, a seguir será feita uma reflexão de diversas afirmações a respeito do tema.
 				Além disso, em alguns momentos a discusão sobre o tema terá como plano de fundo o contexto da Universidade Federal de Santa Catarina (UFSC).
 			</p>
